--- a/public/index2.html
+++ b/public/index2.html
@@ -554,7 +554,7 @@
 
                                     <div class="second-bedroom item">
                                         <div class="inner">
-                                            <span>сменим постельное белье и заправим постель  <br> как в пятизвездочной гостинице</span>
+                                            <span>Cменим постельное белье и заправим постель как в пятизвездочной гостинице</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -789,7 +789,9 @@
                                 <div class="image-small">
                                     <img src="images/strong5.png" alt="">
                                     <div class="overlay"></div>
-                                    <p>Конфиденциальность <br> и безопасность</p>
+                                    <p> <span class="conf">Конфиденциальность <br> и безопасность</span>
+                                        <span class="conf-mob">Конфиденциаль- ность <br> и безопасность</span>
+                                    </p>
                                 </div>
                             </div>
 
