add fours  lending

--- a/public/index3.html
+++ b/public/index3.html
@@ -104,7 +104,7 @@
 
     <!--.......................BANNER.......................-->
 
-    <div class="banner supporting">
+    <div class="banner general">
         <div class="container">
             <div class="banner-inner">
 
@@ -509,7 +509,7 @@
 
                                     <div class="first-living-general item">
                                         <div class="inner">
-                                            <span>Протираем все доступные поверхности</span>
+                                            <span>Мытье люстр</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -517,7 +517,7 @@
 
                                     <div class="second-living-general item">
                                         <div class="inner">
-                                            <span>Заботливо расставим вещи</span>
+                                            <span>Очистка бытовой техники <br> специальными средствами</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -525,7 +525,15 @@
 
                                     <div class="third-living-general item">
                                         <div class="inner">
-                                            <span>Пропылесосим, а затем вымоем полы и плинтусы</span>
+                                            <span>Сухая чистка мебели</span>
+                                            <div class="trian"></div>
+                                        </div>
+                                        <div class="circle-small"></div>
+                                    </div>
+
+                                    <div class="four-living-general item">
+                                        <div class="inner">
+                                            <span>Сухая и влажная уборка полов, плинтусов</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -554,7 +562,7 @@
 
                                     <div class="first-bedroom-general item">
                                         <div class="inner">
-                                            <span>Моем до блеска зеркала и стеклянные поверхности</span>
+                                            <span>Очистка зеркал и всех стеклянных поверхностей</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -562,7 +570,7 @@
 
                                     <div class="second-bedroom-general item">
                                         <div class="inner">
-                                            <span>Cменим постельное белье и заправим постель как в пятизвездочной гостинице</span>
+                                            <span>Смена постельного белья</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -570,7 +578,7 @@
 
                                     <div class="third-bedroom-general item">
                                         <div class="inner">
-                                            <span>Пропылесосим, а затем вымоем полы и плинтусы</span>
+                                            <span>Очистка всех доступных поверхностей</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -578,7 +586,7 @@
 
                                     <div class="four-bedroom-general item">
                                         <div class="inner">
-                                            <span>Аккуратно соберем и сложим одежду</span>
+                                            <span>Сухая чистка ковров</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -660,7 +668,7 @@
 
                                     <div class="first-kitchen-general item">
                                         <div class="inner">
-                                            <span>Вымоем бытовую технику снаружи</span>
+                                            <span>Очистка предметов мебели снаружи</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -668,7 +676,7 @@
 
                                     <div class="second-kitchen-general item">
                                         <div class="inner">
-                                            <span>Очистим от жира кухонную плиту</span>
+                                            <span>Удаляем известковый налет на  <br> раковине, смесителе</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -676,7 +684,7 @@
 
                                     <div class="third-kitchen-general item">
                                         <div class="inner">
-                                            <span>Вымоем столешницу и фасады кухни снаружи</span>
+                                            <span>Очистка плиты от жира и налета, <br> пригоревшей пищи</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -684,7 +692,7 @@
 
                                     <div class="four-kitchen-general item">
                                         <div class="inner">
-                                            <span>Пропылесосим, а затем вымоем полы и плинтусы</span>
+                                            <span>Очистка кухни сверху и снизу</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -713,7 +721,7 @@
 
                                     <div class="first-bathroom-general item">
                                         <div class="inner">
-                                            <span>Протираем все доступные поверхности</span>
+                                            <span>Очистка зеркальных и стеклянных поверхностей</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -721,7 +729,7 @@
 
                                     <div class="second-bathroom-general item">
                                         <div class="inner">
-                                            <span>Очистим до блеска зеркала и стеклянные поверхности</span>
+                                            <span>Очистка полотенцесушителей</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -729,7 +737,7 @@
 
                                     <div class="third-bathroom-general item">
                                         <div class="inner">
-                                            <span>Соберем и вынесем мусор, заменим мусорный пакет</span>
+                                            <span>Дезинфекция сантехники, розеток, <br> выключателей, ручек</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
@@ -737,7 +745,7 @@
 
                                     <div class="four-bathroom-general item">
                                         <div class="inner">
-                                            <span>Вымоем и продезинфицируем всю сантехнику</span>
+                                            <span>Удаляем известковый налет</span>
                                             <div class="trian"></div>
                                         </div>
                                         <div class="circle-small"></div>
