change form and banner bg

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                         </li>
                         <li class="social">
                             <div class="social-icons">
-                                <a href="#">
+                                <a href="https://www.facebook.com/solidcarecleaning/">
                                     <div class="circle-big">
                                         <div class="circle-small">
                                             <span class="icon-facebook"></span>
@@ -79,7 +79,7 @@
                                     </div>
                                 </a>
 
-                                <a href="#">
+                                <a href="https://www.instagram.com/solidcare/">
                                     <div class="circle-big">
                                         <div class="circle-small">
                                             <span class="icon-jam-instagram"></span>
@@ -87,7 +87,7 @@
                                     </div>
                                 </a>
 
-                                <a href="#">
+                                <a href="https://www.youtube.com/channel/UCud04vCZ4elTJSsnkeA33wg">
                                     <div class="circle-big">
                                         <div class="circle-small">
                                             <span class="icon-youtube"></span>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="social-icons">
-                    <a href="#">
+                    <a href="https://www.facebook.com/solidcarecleaning/">
                         <div class="circle-big">
                             <div class="circle-small">
                                 <span class="icon-facebook"></span>
@@ -126,7 +126,7 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="https://www.instagram.com/solidcare/">
                         <div class="circle-big">
                             <div class="circle-small">
                                 <span class="icon-jam-instagram"></span>
@@ -134,7 +134,7 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="https://www.youtube.com/channel/UCud04vCZ4elTJSsnkeA33wg">
                         <div class="circle-big">
                             <div class="circle-small">
                                 <span class="icon-youtube"></span>
@@ -648,7 +648,7 @@
                         <div class="line"></div>
 
                         <div class="social-icons">
-                            <a href="#">
+                            <a href="https://www.facebook.com/solidcarecleaning/">
                                 <div class="circle-big">
                                     <div class="circle-small">
                                         <span class="icon-facebook"></span>
@@ -656,7 +656,7 @@
                                 </div>
                             </a>
 
-                            <a href="#">
+                            <a href="https://www.instagram.com/solidcare/">
                                 <div class="circle-big">
                                     <div class="circle-small">
                                         <span class="icon-jam-instagram"></span>
@@ -664,7 +664,7 @@
                                 </div>
                             </a>
 
-                            <a href="#">
+                            <a href="https://www.youtube.com/channel/UCud04vCZ4elTJSsnkeA33wg">
                                 <div class="circle-big">
                                     <div class="circle-small">
                                         <span class="icon-youtube"></span>
