--- a/public/index3.html
+++ b/public/index3.html
@@ -71,7 +71,7 @@
                         </li>
                         <li class="social">
                             <div class="social-icons">
-                                <a href="#">
+                                <a href="https://www.facebook.com/solidcarecleaning/">
                                     <div class="circle-big">
                                         <div class="circle-small">
                                             <span class="icon-facebook"></span>
@@ -79,7 +79,7 @@
                                     </div>
                                 </a>
 
-                                <a href="#">
+                                <a href="https://www.instagram.com/solidcare/">
                                     <div class="circle-big">
                                         <div class="circle-small">
                                             <span class="icon-jam-instagram"></span>
@@ -87,7 +87,7 @@
                                     </div>
                                 </a>
 
-                                <a href="#">
+                                <a href="https://www.youtube.com/channel/UCud04vCZ4elTJSsnkeA33wg">
                                     <div class="circle-big">
                                         <div class="circle-small">
                                             <span class="icon-youtube"></span>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="social-icons">
-                    <a href="#">
+                    <a href="https://www.facebook.com/solidcarecleaning/">
                         <div class="circle-big">
                             <div class="circle-small">
                                 <span class="icon-facebook"></span>
@@ -126,7 +126,7 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="https://www.instagram.com/solidcare/">
                         <div class="circle-big">
                             <div class="circle-small">
                                 <span class="icon-jam-instagram"></span>
@@ -134,7 +134,7 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="https://www.youtube.com/channel/UCud04vCZ4elTJSsnkeA33wg">
                         <div class="circle-big">
                             <div class="circle-small">
                                 <span class="icon-youtube"></span>
@@ -859,13 +859,12 @@
                  </div>
                  <div class="col-lg-4">
                      <form class="order-main">
-                         <h4 class="form-title"> У вас остались вопросы?</h4>
-                         <p>Заполните форму и получите БЕСПЛАТНУЮ консультацию специалиста</p>
+                         <h4 class="form-title"> Нужна уборка в квартире или загородном доме?</h4>
+                         <p>Оставьте заявку с сайта и получите скидку 25% на первую уборку</p>
 
                          <input placeholder="ИМЯ" type="text" name="name" required>
                          <input placeholder="ТЕЛЕФОН" type="tel" name="phone" class="phoneidcl" required>
-                         <input placeholder="ВОПРОС" type="text" name="question" required>
-                         <input name="order" type="hidden" value="У вас остались вопросы?">
+                         <input name="order" type="hidden" value="Нужна уборка в квартире или загородном доме?">
 
                          <input type="hidden" name="utm_source" value="<?php echo $_GET['utm_source']; ?>">
                          <input type="hidden" name="utm_medium" value="<?php echo $_GET['utm_medium']; ?>">
@@ -874,7 +873,7 @@
                          <input type="hidden" name="utm_term" value="<?php echo $_GET['utm_term']; ?>">
 
                          <button class="disbutt" disabled>
-                             <span class="btn">Заказать звонок </span>
+                             <span class="btn">Получить</span>
                          </button>
                      </form>
                  </div>
@@ -1135,7 +1134,7 @@
                         <div class="line"></div>
 
                         <div class="social-icons">
-                            <a href="#">
+                            <a href="https://www.facebook.com/solidcarecleaning/">
                                 <div class="circle-big">
                                     <div class="circle-small">
                                         <span class="icon-facebook"></span>
@@ -1143,7 +1142,7 @@
                                 </div>
                             </a>
 
-                            <a href="#">
+                            <a href="https://www.instagram.com/solidcare/">
                                 <div class="circle-big">
                                     <div class="circle-small">
                                         <span class="icon-jam-instagram"></span>
@@ -1151,7 +1150,7 @@
                                 </div>
                             </a>
 
-                            <a href="#">
+                            <a href="https://www.youtube.com/channel/UCud04vCZ4elTJSsnkeA33wg">
                                 <div class="circle-big">
                                     <div class="circle-small">
                                         <span class="icon-youtube"></span>
