change forms caption

--- a/public/index4.html
+++ b/public/index4.html
@@ -832,7 +832,7 @@
                  <div class="col-lg-4">
                      <form class="order-main">
                          <h4 class="form-title"> Нужна уборка в квартире или загородном доме?</h4>
-                         <p>Оставьте заявку с сайта и получите скидку 25% на первую уборку</p>
+                         <p>Оставьте заявку и получите скидку 25% на первую уборку</p>
 
                          <input placeholder="ИМЯ" type="text" name="name" required>
                          <input placeholder="ТЕЛЕФОН" type="tel" name="phone" class="phoneidcl" required>
